--- a/frontend/src/assets/css/common.css
+++ b/frontend/src/assets/css/common.css
@@ -643,6 +643,17 @@ select {
   height: 50px;
   position: relative;
 }
+.pipelineCreateNavBox .activationBtn {
+  background-color: #2B4F8C;
+  border: 1px solid #DFDFDF;
+  justify-content: center;
+  align-items: center;
+  display: flex;
+  color: white;
+  width:13%;
+  height: 50px;
+  position: relative;
+}
 .pipelineCreateNavBox .navBoxBtn:hover {
   background-color: #2B4F8C;
   border: 1px solid #DFDFDF;
@@ -694,6 +705,28 @@ select {
   justify-content: center;
   border-radius: 100px;
   color: black;
+  width:25px;
+  height:25px;
+  margin-right: 10px;
+}
+.pipelineCreateNavBox .activationBtn >  .numberBox{
+  background-color: rgba( 255, 255, 255 ,0.2);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 100px;
+  color: white;
+  width:25px;
+  height:25px;
+  margin-right: 10px;
+}
+.pipelineCreateNavBox .navBoxBtn:hover >  .numberBox{
+  background-color: rgba( 255, 255, 255 ,0.2);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 100px;
+  color: white;
   width:25px;
   height:25px;
   margin-right: 10px;
