--- a/src/main/resources/template/Convertor.xml
+++ b/src/main/resources/template/Convertor.xml
@@ -2,7 +2,7 @@
 <template encoding-version="1.3">
     <description></description>
     <groupId>a089922b-0183-1000-a3f2-1a27956482d8</groupId>
-    <name>convertor</name>
+    <name>converter</name>
     <snippet>
         <processGroups>
             <id>56512d1b-c1a8-310e-0000-000000000000</id>
