--- a/frontend/src/assets/css/common.css
+++ b/frontend/src/assets/css/common.css
@@ -476,9 +476,12 @@ select {
   border: 1px solid #DFDFDF;
 }
 .customTable select {
-  width: 60%;
-  height: 45px;
+  width: 70%;
+  height: 35px;
   line-height: 40px;
+  padding-left: 15px;
+  margin-left :12px;
+  margin-top: 3px;
   border: 1px solid #DFDFDF;
 }
 .customTable > .disf > .value div{
