--- a/frontend/src/assets/css/common.css
+++ b/frontend/src/assets/css/common.css
@@ -162,6 +162,7 @@ select {
 .pipelineTable >.v-data-table__wrapper td:nth-of-type(1) {
   width: 5%;
   border-left: 1px solid #DFDFDF;
+  padding: 0 0px;
 }
 .pipelineTable >.v-data-table__wrapper th:nth-of-type(2),
 .pipelineTable >.v-data-table__wrapper td:nth-of-type(2) {
